0.8.0/_sources/api/skimage.data.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`data`
===================
.. automodule:: skimage.data

.. currentmodule:: skimage.data
.. autosummary::

   skimage.data.camera
   skimage.data.checkerboard
   skimage.data.clock
   skimage.data.coins
   skimage.data.imread
   skimage.data.lena
   skimage.data.load
   skimage.data.moon
   skimage.data.page
   skimage.data.text

camera
------

.. autofunction:: skimage.data.camera

checkerboard
------------

.. autofunction:: skimage.data.checkerboard

clock
-----

.. autofunction:: skimage.data.clock

coins
-----

.. autofunction:: skimage.data.coins

imread
------

.. autofunction:: skimage.data.imread

lena
----

.. autofunction:: skimage.data.lena

load
----

.. autofunction:: skimage.data.load

moon
----

.. autofunction:: skimage.data.moon

page
----

.. autofunction:: skimage.data.page

text
----

.. autofunction:: skimage.data.text

