0.10.x/_sources/api/skimage.data.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`data`
===================
.. automodule:: skimage.data

.. currentmodule:: skimage.data
.. autosummary::

   skimage.data.camera
   skimage.data.checkerboard
   skimage.data.chelsea
   skimage.data.clock
   skimage.data.coffee
   skimage.data.coins
   skimage.data.horse
   skimage.data.hubble_deep_field
   skimage.data.immunohistochemistry
   skimage.data.imread
   skimage.data.lena
   skimage.data.load
   skimage.data.moon
   skimage.data.page
   skimage.data.text

camera
------

.. autofunction:: skimage.data.camera

checkerboard
------------

.. autofunction:: skimage.data.checkerboard

chelsea
-------

.. autofunction:: skimage.data.chelsea

clock
-----

.. autofunction:: skimage.data.clock

coffee
------

.. autofunction:: skimage.data.coffee

coins
-----

.. autofunction:: skimage.data.coins

horse
-----

.. autofunction:: skimage.data.horse

hubble_deep_field
-----------------

.. autofunction:: skimage.data.hubble_deep_field

immunohistochemistry
--------------------

.. autofunction:: skimage.data.immunohistochemistry

imread
------

.. autofunction:: skimage.data.imread

lena
----

.. autofunction:: skimage.data.lena

load
----

.. autofunction:: skimage.data.load

moon
----

.. autofunction:: skimage.data.moon

page
----

.. autofunction:: skimage.data.page

text
----

.. autofunction:: skimage.data.text

